Added a complete Main demo showcasing eligibility, zone allocation, billing, penalties, monitoring and exit authorization. Finalized monitoring integration.